# rusty-diceware

./: .gitignore  Cargo.toml  README.md
src/: dice.rs  list.rs  main.rs
