[package]
authors = ["nephtys <christopher.kaag@gmail.com>"]
name = "dice-me"
version = "0.1.0"
[dependencies]
clap = "2.26.0"
rand = "0.3.16"




[package]
# ...

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown).
description = "Just another simple rust based diceware generator"

# These URLs point to more information about the repository. These are
# intended to be webviews of the relevant data, not necessarily compatible
# with VCS tools and the like.
repository = "https://github.com/n3phtys/rusty-diceware"


# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can be
# separated with a `/`.
license = "MIT"